--- a/Teaching/ISIS3710/HTML&CSS/01. Contenido y elementos básicos.md
+++ b/Teaching/ISIS3710/HTML&CSS/01. Contenido y elementos básicos.md
@@ -243,6 +243,81 @@ Tag | Interpretación | Documentación
 --- | --- | ---
 `<img>` | Agrega una imagen al documento dada la ubicación del recurso | *http://www.w3schools.com/tags/tag_img.asp*
 `<br>` | Salto de linea | *http://www.w3schools.com/tags/tag_br.asp*
+`<b>`| Resalta la letra del contenido del mismo
+`<i>` | Pone en itálica la letra del contenido del *tag*
+`<sub>` | Es usada para poner caracteres como *subsscrit*
+`<strong>`| Pone enfásis en el grososr de la letra de su contenido
+`<em>` | Pone la letra de su contenido en itálica
+`<blockquote>` | Es usado para frases citadas que duran un párrafo entero, como atributo, puede contener la fuente
+`<q>` | Pone comillas alrededor de su contenido
+`<abbr>` | Se usa para abbreviaturas, como atributo, puede contener su significado
+`<cite>` | Se usa para marcar citas de títulos de libros, artículos o peliculas
+`<dfn>` | Define la primera instancia de un término introducido, es para estructura semántica 
+`<address>` | Contiene detalles de contacto, por ejemplo, direcciones físicas, teléfonos, o emais, en éste último caso, como atributo contiene la referencia
+`<ins>` | Resalta su contenido,subrayando éste mismo
+`<del>` | Pone una linea sobre su contenido, indica que el elemento debe ser borrado
+`<s>` | Pone una linea sobre su contenido, indica que el contenido no es adecuado o relevante
+
+Con algunos de los nuevos elementos introducidos, el código y la apariencia de nuestra página de ejemplo lucen así:
+
+```html
+<!DOCTYPE html>
+<html>
+	<head>
+		<meta charset="utf-8">
+		<title>Juan Eduardo Soto</title>
+	</head>
+
+	<body>
+		<h2><img src="photo.jpg" alt="Juan Eduardo Soto" height="150" width="150"><br>Juan Eduardo Soto Ph.D<sub>2</h2>
+		
+		<h3>Profesor asociado, Universidad de los Andes</h3>
+		<h3>Departamento de Ciencias de la computación</h3>
+		<h3>Facultad de Matemáticas</h3>
+
+		<blockquote>
+			Let us change our traditional attitude to the construction of programs. Instead of imagining that our main task is to instruct a computer what to do, let us concentrate rather on explaining to human beings what we want a computer to do.
+
+			<br>
+
+			<i> Donald E. Knuth </i>
+
+		</blockquote>
+
+		<p>Mi investigación principalmente, va enfocada al desarrollo práctico de algoritmos 
+		de <em>Machine Learning</em>, reconocimiento de patrones y <ins>optimización convexa</ins>, con 
+		el objetivo de ampliar el  entendimiento de varios paradigmas del aprendizaje estadístico 
+		sobre volúmenes inmensos de     datos. Trabajo en problemas de visión por computador,
+		reconocimiento de imágenes, tratamiento de datos, y computación de alto desempeño.
+
+		<br>
+		<br>
+
+		Juan Soto, es un profesor asistente en el departamento de ciencias de la computación en la
+		facultad de matemáticas de la Universidad de los Andes, donde co-dirige el laboratorio de
+		<em>Data mining and Pattern matching</em>. Su área de investigación, se centra en la implementación
+		eficiente de algoritmos de aprendizaje estadístico sobre grandes bodegas de información no
+		estructurada. Su trabajo ha sido laureado y premiado, con nominaciones al Best Paper Award
+		de <abbr title="Association for computer machinery">ACM</abbr> y IEEE. El profesor Juan Soto, tiene los títulos Ph.D y M.Sc en <b>Computer
+		Science and Electrical Engineering</b> en MIT, y B.Sc en Ingeniería de Sistemas y Computación y Matemáticas en la
+		Universidad de los Andes.</p>
+
+		<address>
+			<a href="mailto:je.soto@uniandes.edu.co"> je.soto@uniandes.edu.co </a>
+			<br>
+			Bogotá, Colombia
+		</address>
+
+	</body>
+</html>
+```
+
+![](https://raw.githubusercontent.com/scvalencia/SchoolWork/master/Teaching/ISIS3710/HTML%26CSS/img/ex2_BasicContent.png)
+
+
+
+
+
 
 
 
