More information on some common tags

--- a/Teaching/ISIS3710/HTML&CSS/01. Contenido y elementos básicos.md
+++ b/Teaching/ISIS3710/HTML&CSS/01. Contenido y elementos básicos.md
@@ -318,40 +318,71 @@ Ya se han revisado los elementos básicos para el manejo de texto en *HTML*, aho
 
 + `<section>`
 
-The SECTION element is part of a new set of elements that describe the content on a page. You can think of the SECTION element as enclosing a significant part of a page, in the same way that a chapter in a book is a significant section of the book. An example of the SECTION element follows.
+El elemento *<section>*, sirve para enmarcar piezas significativas de texto dentor del documento *HTML*, semánticmanete, es equivalente a la sección de un libro. Un ejemplo es:
 
 ```html
-<SECTION><ARTICLE><P>Nulla facilisis egestas nulla id rhoncus. Duis   eget diam nisi, quis sagittis nulla. Fusce lacinia   pharetra dui, a rhoncus sapien egestas ut. Ut lacus   ante, semper sed interdum a, posuere egestas ante. Nullam   luctus arcu sed sapien dignissim quis posuere ipsum   placerat.</P>      </ARTICLE>      <ARTICLE>      <P>Lorem ipsum dolor sit amet, consectetur   adipiscing elit. Nunc vehicula ipsum sit amet eros   adipiscing volutpat. Sed gravida urna vel sapien commodo   pretium.</P></ARTICLE><UL><LI>Praesent ut sapien quam. </LI> <LI>Aliquam erat volutpat. </LI> </UL></SECTION>
+<SECTION>	<ARTICLE>		<P>
+			Nulla facilisis egestas nulla id rhoncus. Duis   			eget diam nisi, quis sagittis nulla. Fusce lacinia   			pharetra dui, a rhoncus sapien egestas ut. Ut lacus   			ante, semper sed interdum a, posuere egestas ante. Nullam   			luctus arcu sed sapien dignissim quis posuere ipsum   			placerat.
+   		</P>
+	</ARTICLE>    <ARTICLE>    	<P>    		Lorem ipsum dolor sit amet, consectetur   			adipiscing elit. Nunc vehicula ipsum sit amet eros   			adipiscing volutpat. Sed gravida urna vel sapien commodo   			pretium.
+   		</P>	</ARTICLE>	<UL>		<LI>Praesent ut sapien quam. </LI> 		<LI>Aliquam erat volutpat. </LI> 
+	</UL></SECTION>
 ```
+![](https://raw.githubusercontent.com/scvalencia/SchoolWork/master/Teaching/ISIS3710/HTML%26CSS/img/ex1_wholePage.png)
 + `<article>`
-The ARTICLE element is used to clearly identify content in a web page. Blogs are a good example where content is clearly identified. The main section of a page is the content that you can wrap using the ARTICLE element. You can have additional HTML elements included within an ARTICLE. The following blog from http://blog.whatwg.org/ is an example that shows how you can use the ARTICLE element in HTML.
-```html<ARTICLE><H1>Spelling HTML5</H1><P> <TIME>September 10th, 2009</TIME> by Henri Sivonen</P> <P> What’s the right way to spell “HTML5”? The shortanswer is: “HTML5” (without a space).</P> </ARTICLE>
+El elemento *article*, es claramente usado para identificar el contenido en una página web. La sección principal de algo, es algo que se puede marcar usando éste *tag*.
+```html<article>
+	<h1>Spelling HTML5</h1>
+	<p> <time>Enero 10, 2015</time> by Eduardo Melo</p> 
+	<p> 
+		What’s the right way to spell “HTML5”? The short
+		answer is: “HTML5” (without a space).
+	</p> 
+</article>
 ```
-More than one ARTICLE can be added to a page. You should think of the ARTICLE element as a tool that logically breaks up content. Similar content separated by the ARTICLE element can be contained within a SECTION element.
+![](https://raw.githubusercontent.com/scvalencia/SchoolWork/master/Teaching/ISIS3710/HTML%26CSS/img/ex1_wholePage.png)
+
+éste elemento, fracciona de manera lógica el texto.
 + `<header> & <footer>`
-The top and bottom of a page created with Microsoft Word or any other word processing software is a place reserved for the header and footer information page. This includes page number, copyright notice, and other details. Web pages are no different. Header and footer information is found on most web pages. You can see in Figure 1.8 on Focal Press’ web site that header infor- mation is used.You can see the use of the header on the page. It contains the Focal Press logo, the element line, high-level links, and a search box. HTML5 allows this area of content to be clearly identified as either a header or a footer using the new HEADER and FOOTER elements.For instance, a HEADER for Focal Press would look like the following.
-```html
-<HEADER>      <SECTION><a href=“/”><img src=“/images/fplogo.png”   border=“none” alt=“Focal Press logo” title=“Focal Press   Home”/></a> learn | master | create</b>SECTION><NAV>      <ul><li><a title=“Digital Imaging and Photography”   class=“first”href=“/photography.aspx”>Photography</a></li><li><a title=“Production, Postproduction, and Motion Graphics” href=“/film_video.aspx”>Film &amp; Video</a></li><li><a title=“Animation, 3D, and Games” href=“/animation_3d.aspx”>Animation &amp; 3D</a></li><li><a title=“Audio Engineering and Music Technology” href=“/audio.aspx”>Audio</a></li><li><a   title=“Broadcast and Digital Media”   href=“/broadcast.aspx”>Broadcast</a></li><li><a   title=“Theatre and Live Performance”   href=“/theatre.aspx”>Theatre</a></li><li><a class=“offsite   last”
-   href=“http://www.elsevierdirect.com/imprint.jsp?iid=100001” >Bookstore </a></li> </ul> </NAV></HEADER>
-```
-The FOOTER section to a page is also viewed on most webpages. An example FOOTER in HTML5 will look as follows:
-```html<FOOTER><P>Copyright © 2009 Focal Press, Inc.</P> </FOOTER>
-```
-Unlike normal page layout, the HEADER and FOOTER are not exclusive to just the head and foot of a web page. You can have a header and footer placed around the ARTICLE or SECTION ele- ment if those pieces require specific header and footer content.
+El encabezado y el pie de página de los documentos típicos de Microsoft Word, pueden incluir información como el número de página, notas de derechos de autor y otros detalles relevantes. En las áinas web, ésta información está presente a través de éstos *tags*. Respectivamente `<header>` denota el encabezado de una página web, mientras `<footer>` marca su pie de página. Normalmente, el `header` contiene elementos como logos, lineas, enlaces y barras de búsqueda. Mientras el `footer`, contiene información de contacto y derechos de autor.Éstos *tags*, pueden ser usados en contextos distintos a toda la página, pueden ser usados dentro de los elementos *SECTION* & *ARTICLE*.
 + `<aside>`
-The role of the ASIDE element is to describe content that is related to but is not part of the main content on the web page. You can think of the ASIDE element as fitting the role of a side- bar reference or an aside found in books and articles. The follow- ing example shows how the ASIDE element can be used with the ARTICLE element.
-```html<ARTICLE>      <P>Lorem ipsum dolor sit amet, consectetur adipiscing   elit. Vivamus sed eros at metus pulvinar convallis id quis   purus. Sed lacinia condimentum viverra.</P>      <P>Lorem ipsum dolor sit amet, consectetur adipiscing   elit. Vivamus sed eros at metus pulvinar convallis id quis   purus. Sed lacinia condimentum viverra.</P><ASIDE><H1>What is Lorem Ipsum?</H1><P>Lorem Ipsum is simply dummy text of the printing andtypesetting industry.</P> </ASIDE></ARTICLE>
-```The main content of the page and a support aside can be clearly separated using the ASIDE element, as shown in Figure 1.9. Apply formatting, using CSS, to visually show where the ASIDEis on the screen.
+El objetivo de éste elemento, es describir contenido que no está relacionado pero es parte del contenido principal de la página. Es decir, como una referencia en los libros.
+```html<article>	<p>
+		Lorem ipsum dolor sit amet, consectetur adipiscing
+		elit. Vivamus sed eros at metus pulvinar convallis id quis
+		purus. Sed lacinia condimentum viverra.
+	</p>
+	<p>
+		Lorem ipsum dolor sit amet, consectetur adipiscing
+		elit. Vivamus sed eros at metus pulvinar convallis id quis
+		purus. Sed lacinia condimentum viverra.
+	</p>
+	<aside>
+		<h1>What is Lorem Ipsum?</h1>
+		<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+	</aside>
+</article>
+```![](https://raw.githubusercontent.com/scvalencia/SchoolWork/master/Teaching/ISIS3710/HTML%26CSS/img/ex1_wholePage.png)
 + `<dialog>`
-Conversation and comments are common place on the Web. The DIALOG element allows you to identify conversation on a screen. There are three main parts to the DIALOG element:• The wrapping DIALOG element that identifies a conversation.• A DT element that identifies the speaker.• A DD element that identifies the conversation.Using the DIALOG element to block conversation can look as follows.
-```html<DIALOG><DT>Josie Smith </DT><DD>HTML5 is a great way to block semantic elements on   a page. </DT>      <DT>Ian Jones </DT>      <DD>Yes, you are absolutely right. </DD>      <DT>Josie Smith </DT>      <DD>Conversation can now be easily identified. </DT>      <DT>Ian Jones </DT>      <DD><P>Blocking allows you to accomplish several things   such as:</P>      <UL><LI>Clearly identifying blocks of content on a page</LI> <LI>Making it easier to construct page designs</LI> </UL></DD></DIALOG>
+Las conversaciones y los comentarios, son comunes en la Web. El elemento *dialog*, ayuda a identificar conversaciones en la pantalla. Las partes principales de éste elemento, corresponden al *tag* en sí mismo, los elementos *DT* y *DD* para identificar al emisor del dialogo, y para identificar la conversación respectivamente.
+```html<dialog>
+	<dt><b> Eduardo Soto </b></dt>
+	<dd> HTML5 es un gran lenguaje para expresar la intención semántica de un contenido </dd>
+	<dt><b> Maria Bedoya </b></dt>
+	<dd> Su estructura se asemeja a otros lenguajes de estructura homoiconica como Lisp, Julia o Forth </dd>
+	<dt><b> Eduardo Soto </b></dt>
+	<dd> Es cierto, tal vez XML es un ejemplo más adecuado, recuerda que HTML5 no es un lenguaje de programación </dd>
+	<dt><b> Maria Bedoya </b></dt>
+	<dd> 
+		Ok, me queda claro, los objetivos de HTML son: 
+		<ul>
+			<li>Identificar los elementos de un contenido</li> 
+			<li>Facilitar la construcción de diseños de páginas</li>
+		</ul>
+	</dd>
+</dialog>
 ```
-Opening and closing the conversation is the main DIALOG element. Each new conversation starts with a DT element that identifies the speaker. For instance, Ian Jones is identified using the following DT element:
-```html<DT>Ian Jones </DT>
-```
-Ian’s conversation is then wrapped between a DD element.Here is a close-up example.
-```html<DD><P>Blocking allows you to accomplish several things such as:</P><UL><LI>Clearly identifying blocks of content on a page</LI> <LI>Making it easier to construct page designs</LI> </UL></DD>
-```You can see that additional HTML elements can be placed within the DD DIALOG element such as list, paragraph, or even an article.
+![](https://raw.githubusercontent.com/scvalencia/SchoolWork/master/Teaching/ISIS3710/HTML%26CSS/img/ex1_wholePage.png)
 + `<figure>`
 Inserting images into a web page is common practice. Identifying the image and supporting text as a figure is much more difficult. The FIGURE element clearly identifies an image and supporting description as being part of a set. This set is called a figure group. As with many of the previous new HTML5 elements, the FIGURE element is a method of blocking related content with itself.
 ```html<FIGURE><LEGEND>Figure 12. Using the FIGURE element </LEGEND> <IMG alt=“The FIGURE element is another example   of block semantics in HTML5” src=“figure_element.jpg”   border=“0” height=“140” width=“240”/></FIGURE>
