More stuff to add, images, canvas, and stuff

--- a/Teaching/ISIS3710/HTML&CSS/01. Contenido y elementos básicos.md
+++ b/Teaching/ISIS3710/HTML&CSS/01. Contenido y elementos básicos.md
@@ -328,7 +328,7 @@ El elemento *<section>*, sirve para enmarcar piezas significativas de texto dent
    		</P>	</ARTICLE>	<UL>		<LI>Praesent ut sapien quam. </LI> 		<LI>Aliquam erat volutpat. </LI> 
 	</UL></SECTION>
 ```
-![](https://raw.githubusercontent.com/scvalencia/SchoolWork/master/Teaching/ISIS3710/HTML%26CSS/img/ex1_wholePage.png)
+![](https://raw.githubusercontent.com/scvalencia/SchoolWork/master/Teaching/ISIS3710/HTML%26CSS/img/tags/section.png)
 + `<article>`
 El elemento *article*, es claramente usado para identificar el contenido en una página web. La sección principal de algo, es algo que se puede marcar usando éste *tag*.
 ```html<article>
@@ -340,7 +340,7 @@ El elemento *<section>*, sirve para enmarcar piezas significativas de texto dent
 	</p> 
 </article>
 ```
-![](https://raw.githubusercontent.com/scvalencia/SchoolWork/master/Teaching/ISIS3710/HTML%26CSS/img/ex1_wholePage.png)
+![](https://raw.githubusercontent.com/scvalencia/SchoolWork/master/Teaching/ISIS3710/HTML%26CSS/img/tags/article.png)
 
 éste elemento, fracciona de manera lógica el texto.
 + `<header> & <footer>`
@@ -362,7 +362,7 @@ El elemento *<section>*, sirve para enmarcar piezas significativas de texto dent
 		<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
 	</aside>
 </article>
-```![](https://raw.githubusercontent.com/scvalencia/SchoolWork/master/Teaching/ISIS3710/HTML%26CSS/img/ex1_wholePage.png)
+```![](https://raw.githubusercontent.com/scvalencia/SchoolWork/master/Teaching/ISIS3710/HTML%26CSS/img/tags/aside.png)
 + `<dialog>`
 Las conversaciones y los comentarios, son comunes en la Web. El elemento *dialog*, ayuda a identificar conversaciones en la pantalla. Las partes principales de éste elemento, corresponden al *tag* en sí mismo, los elementos *DT* y *DD* para identificar al emisor del dialogo, y para identificar la conversación respectivamente.
 ```html<dialog>
@@ -382,16 +382,21 @@ El elemento *<section>*, sirve para enmarcar piezas significativas de texto dent
 	</dd>
 </dialog>
 ```
-![](https://raw.githubusercontent.com/scvalencia/SchoolWork/master/Teaching/ISIS3710/HTML%26CSS/img/ex1_wholePage.png)
+![](https://raw.githubusercontent.com/scvalencia/SchoolWork/master/Teaching/ISIS3710/HTML%26CSS/img/tags/dialog.png)
 + `<figure>`
-Inserting images into a web page is common practice. Identifying the image and supporting text as a figure is much more difficult. The FIGURE element clearly identifies an image and supporting description as being part of a set. This set is called a figure group. As with many of the previous new HTML5 elements, the FIGURE element is a method of blocking related content with itself.
-```html<FIGURE><LEGEND>Figure 12. Using the FIGURE element </LEGEND> <IMG alt=“The FIGURE element is another example   of block semantics in HTML5” src=“figure_element.jpg”   border=“0” height=“140” width=“240”/></FIGURE>
+Insertar imagenes en páginas web, es una práctica común, Identificar las imágenes y su texto relacionado es más difícil. El elemento `<figure>`, identifica la imagen y la descripción como un todo.
+```html<figure>
+	<legend>Figure 12. Using the FIGURE element </legend> 
+	<img src="pl.png" alt="The Pulpit Rock">
+</figure> 
 ```
-As with the DIALOG element, the FIGURE element also has an additional element you can use within it. The LEGEND element identifies the text that is to be associated with the image. The FIGURE element can be used multiple times on a page.
-+ `<nav>`
-The final HTML5 blocking element is NAV. Navigation is important to any web site. The role of the NAV element is to clearly identify groups of links that when grouped together form navigation.Navigation can take many different roles on a single web page. The different types of content that can be grouped together as navigation include, but are not limited to, the following:1. Top-level links typically found in the top right corner of a webpage.2. Links that move you through data such as “Next” and“Previous.”3. Links found in the footer of a web page.The following is an example of navigation grouped using theNAV element.
-```html<NAV><a href=”/home.html”>Home</a> | <a href=”aboutUs.html”>About Us</a> | <a href=”contactUs.html”>Contact Us</a></NAV>
-```Of all the blocking elements in HTML5, the NAV element isone of the easiest to use.
+![](https://raw.githubusercontent.com/scvalencia/SchoolWork/master/Teaching/ISIS3710/HTML%26CSS/img/tags/dialog.png)+ `<nav>`
+El objetivo de éste *tag*, es identificar grupos relacionados de enlaces y agruparlos todos formando una especie de navegación- Puede agrupar enlaces de en el mismo dominio, así como a otros dominios. 
+```html<nav>
+			<a href=”/home.html”>Home</a> | <a href=”aboutUs.html”>About Us</a> | <a href=”contactUs.html”>Contact Us</a>
+		</nav>
+```
+![](https://raw.githubusercontent.com/scvalencia/SchoolWork/master/Teaching/ISIS3710/HTML%26CSS/img/tags/dialog.png)
 
 
 
