More stuff to add, images, canvas, and stuff

--- a/Teaching/ISIS3710/HTML&CSS/01. Contenido y elementos básicos.md
+++ b/Teaching/ISIS3710/HTML&CSS/01. Contenido y elementos básicos.md
@@ -390,7 +390,7 @@ El elemento *<section>*, sirve para enmarcar piezas significativas de texto dent
 	<img src="pl.png" alt="The Pulpit Rock">
 </figure> 
 ```
-![](https://raw.githubusercontent.com/scvalencia/SchoolWork/master/Teaching/ISIS3710/HTML%26CSS/img/tags/dialog.png)+ `<nav>`
+![](https://raw.githubusercontent.com/scvalencia/SchoolWork/master/Teaching/ISIS3710/HTML%26CSS/img/tags/figure.png)+ `<nav>`
 El objetivo de éste *tag*, es identificar grupos relacionados de enlaces y agruparlos todos formando una especie de navegación- Puede agrupar enlaces de en el mismo dominio, así como a otros dominios. 
 ```html<nav>
 			<a href=”/home.html”>Home</a> | <a href=”aboutUs.html”>About Us</a> | <a href=”contactUs.html”>Contact Us</a>
