--- a/Teaching/ISIS3710/HTML&CSS/01. Contenido y elementos básicos.md
+++ b/Teaching/ISIS3710/HTML&CSS/01. Contenido y elementos básicos.md
@@ -396,7 +396,16 @@ El elemento *<section>*, sirve para enmarcar piezas significativas de texto dent
 			<a href=”/home.html”>Home</a> | <a href=”aboutUs.html”>About Us</a> | <a href=”contactUs.html”>Contact Us</a>
 		</nav>
 ```
-![](https://raw.githubusercontent.com/scvalencia/SchoolWork/master/Teaching/ISIS3710/HTML%26CSS/img/tags/nav.png)
+![](https://raw.githubusercontent.com/scvalencia/SchoolWork/master/Teaching/ISIS3710/HTML%26CSS/img/tags/nav.png)
+## Ejemplo
+```html
+<html>  	<head>		<title>Text</title>	</head>
+		<body>		<h1>The Story in the Book</h1>		<h2>Chapter 1</h2>		<p>
+			Molly had been staring out of her window for about			an hour now. On her desk, lying between the copies of <i>Nature</i>, <i>New 			Scientist</i>, 	and all the other scientific journals her work had appeared in, was 			a well 	thumbed copy of e<cite>On The Road</cite>. It had been Molly's favorite 			book since 	college, and the longer 			she spent in these four walls the more she felt she 			needed to be free.
+		</p>	
+		<p>
+			She had spent the last ten years in this room, sitting under a poster with an 			Oscar Wilde quote proclaiming that <q>Work is the refuge of			people who have nothing better to do</q>. Although many considered her pioneering 			work, 	unraveling the secrets of the llama <abbr title="Deoxyribonucleic 			acid">DNA</abbr>, to be 	an outstanding achievement, Molly <em>did</em> think 			she had something better to do.</p>  </body></html>
+```
 
 
 
