More stuff to add, images, canvas, and stuff

--- a/Teaching/ISIS3710/HTML&CSS/01. Contenido y elementos básicos.md
+++ b/Teaching/ISIS3710/HTML&CSS/01. Contenido y elementos básicos.md
@@ -407,7 +407,9 @@ El elemento *<section>*, sirve para enmarcar piezas significativas de texto dent
 		<p>
 			She had spent the last ten years in this room, sitting under a poster with an			Oscar Wilde quote proclaiming that <q>Work is the refuge of			people who have nothing better to do</q>. Although many considered her pioneering			work, 	unraveling the secrets of the llama <abbr title="Deoxyribonucleic			acid">DNA</abbr>, to be 	an outstanding achievement, Molly <em>did</em> think			she had something better to do.
 		</p>  </body></html>
-```
+```
+## Ejercicio
+
 
 
 
